docs/v1.4.5/zh/api/campaign-ext/GauntletMapBarGlobalLayer.md
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `GauntletMapBarGlobalLayer`
- [← 本领域 / 返回 campaign-ext](./)
- [↑ API 目录](../)
- [🏠 首页 v1.4.5](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# GauntletMapBarGlobalLayer

**Namespace:** SandBox.GauntletUI.Map
**Module:** SandBox.GauntletUI
**Type:** `public class GauntletMapBarGlobalLayer : GlobalLayer`
**Base:** `GlobalLayer`
**File:** `Bannerlord.Source/Modules.SandBox/SandBox.GauntletUI/SandBox.GauntletUI.Map/GauntletMapBarGlobalLayer.cs`

## 概述

`GauntletMapBarGlobalLayer` 位于 `SandBox.GauntletUI.Map`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `SandBox.GauntletUI.Map` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要属性

| Name | Signature |
|------|-----------|
| `IsInArmyManagement` | `public bool IsInArmyManagement { get; }` |

## 主要方法

### Initialize
`public void Initialize(MapBarVM dataSource)`

**用途 / Purpose:** 初始化 `initialize` 的状态、资源或绑定。

### OnFinalize
`public void OnFinalize()`

**用途 / Purpose:** 当 `finalize` 事件触发时调用此方法。

### OnMapConversationStarted
`public void OnMapConversationStarted()`

**用途 / Purpose:** 当 `map conversation started` 事件触发时调用此方法。

### OnMapConversationOver
`public void OnMapConversationOver()`

**用途 / Purpose:** 当 `map conversation over` 事件触发时调用此方法。

### Refresh
`public void Refresh()`

**用途 / Purpose:** 刷新 `refresh` 的显示或缓存。

### IsEscaped
`public bool IsEscaped()`

**用途 / Purpose:** 处理 `is escaped` 相关逻辑。

## 使用示例

```csharp
var value = new GauntletMapBarGlobalLayer();
value.Initialize(dataSource);
```

## 参见

- [完整类目录](../catalog)